--- a/TODO
+++ b/TODO
@@ -1,19 +1,23 @@
-ONE DEVELOPMENT TRACK
+NEWER DEVELOPMENT TRACK
 
-r0.02 - Continue implementing Rosetta::Engine::Generic and
-Rosetta::Utility::SQLBuilder, mainly to implement basic DML functions like
-Select/Insert/Update/Delete, but also to allow creation and removal of views
-and routines.  These don't need to be tested for 0.02, except for compiling.
+r0.03 - Complete the work I left "in progress" as of r0.02.  Implement routine 
+statements, query from-clauses, insert/update/delete, domains as schema objects.
 
-r0.03 - Start the Rosetta::Validator module(s) and actually test that basic
+r0.04 - Start the Rosetta::Validator module(s) and actually test that basic
 stuff like connecting to a database, creating tables, and basic DML functions
-work.  Test it against SQLite and MySQL.
+work.  Update the list of 'standard functions' in SQLBuilder (and
+SQL::SyntaxModel) to more closely reflect the SQL-2003 standard, fill other gaps.
 
-r0.04 - Start the Rosetta::Emulator::DBI and Rosetta::Utility::SQLParser modules 
+r0.05 - Update Rosetta::Engine::Generic to implement some schema reverse
+engineering functions, such as to scan a database and populate a SSM with
+descriptions of its tables, including columns and indexes.  Corresponding 
+Validator updates.  Test it against SQLite and MySQL.
+
+r0.06 - Start the Rosetta::Emulator::DBI and Rosetta::Utility::SQLParser modules 
 and try to get them working on something simple, like connecting to a database 
 and selecting records.  Maybe table creation and IUD also.
 
-r0.05 - Some time around now I will circulate some RFCs to the likes of
+r0.07 - Some time around now I will circulate some RFCs to the likes of
 dbi-users and poop-group so I know what the next major issues I have to address
 or explain are, from the viewpoints of actual potential users.  Around the same
 time, any or all of the core Rosetta/SSM modules may be updated to 'alpha'
@@ -28,7 +32,7 @@ around then too.
 
 * Whatever else needs doing ...
 
-ANOTHER DEVELOPMENT TRACK
+OLDER DEVELOPMENT TRACK
 
 * Connect to (or open) an existing database as a registered or anonymous user,
 which establishes a current working context for doing anything else, and close
