--- a/TODO
+++ b/TODO
@@ -1,21 +1,22 @@
 NEWER DEVELOPMENT TRACK
 
-r0.06 - Continue to implement Generic.pm.  Coordinate with the separately
+r0.07 - Continue to implement Generic.pm.  Coordinate with the separately
 released Rosetta::Validator module(s) and actually test that basic stuff like
 connecting to a database, creating tables, and basic DML functions work. 
 Update the list of 'standard functions' in SQLBuilder (and SQL::SyntaxModel) to
-more closely reflect the SQL-2003 standard, fill other gaps.
+more closely reflect the SQL-2003 standard, fill other gaps.  Test it against 
+SQLite and MySQL.
 
-r0.07 - Update Rosetta::Engine::Generic to implement some schema reverse
+r0.08 - Update Rosetta::Engine::Generic to implement some schema reverse
 engineering functions, such as to scan a database and populate a SSM with
 descriptions of its tables, including columns and indexes.  Corresponding 
 Validator updates.  Test it against SQLite and MySQL.
 
-r0.08 - Start the Rosetta::Emulator::DBI and Rosetta::Utility::SQLParser modules 
+r0.09 - Start the Rosetta::Emulator::DBI and Rosetta::Utility::SQLParser modules 
 and try to get them working on something simple, like connecting to a database 
 and selecting records.  Maybe table creation and IUD also.
 
-r0.09 - Some time around now I will circulate some RFCs to the likes of
+r0.10 - Some time around now I will circulate some RFCs to the likes of
 dbi-users and poop-group so I know what the next major issues I have to address
 or explain are, from the viewpoints of actual potential users.  Around the same
 time, any or all of the core Rosetta/SSM modules may be updated to 'alpha'
