--- a/ReadMe
+++ b/ReadMe
@@ -46,9 +46,9 @@ Standard Modules: none
 Nonstandard Modules: 
 
 	Locale::KeyedText 0.06 (for error messages)
-	SQL::SyntaxModel 0.24
-	Rosetta 0.16
-	DBI (don't know minimum version yet)
+	SQL::SyntaxModel 0.38
+	Rosetta 0.33
+	DBI 1.42
 	various DBI Driver (DBD) modules
 
 SUPPORT
@@ -64,42 +64,45 @@ None besides myself so far.
 
 COPYRIGHT AND LICENSE
 
-This file is part of the Rosetta database abstraction framework.
+This file is part of the Rosetta::Extensions collection of Rosetta feature
+reference implementations.
 
-Rosetta is Copyright (c) 1999-2004, Darren R. Duncan.  All rights reserved.
-Address comments, suggestions, and bug reports to B<perl@DarrenDuncan.net>, or
-visit "http://www.DarrenDuncan.net" for more information.
+Rosetta::Extensions is Copyright (c) 1999-2004, Darren R. Duncan.  All rights
+reserved.  Address comments, suggestions, and bug reports to
+B<perl@DarrenDuncan.net>, or visit "http://www.DarrenDuncan.net" for more
+information.
 
-Rosetta is free software; you can redistribute it and/or modify it under the
-terms of the GNU General Public License (GPL) version 2 as published by the
-Free Software Foundation (http://www.fsf.org/).  You should have received a
-copy of the GPL as part of the Rosetta distribution, in the file named
-"LICENSE"; if not, write to the Free Software Foundation, Inc., 59 Temple
-Place, Suite 330, Boston, MA 02111-1307 USA.
+Rosetta::Extensions is free software; you can redistribute it and/or modify it
+under the terms of the GNU General Public License (GPL) version 2 as published
+by the Free Software Foundation (http://www.fsf.org/).  You should have
+received a copy of the GPL as part of the Rosetta::Extensions distribution, in
+the file named "LICENSE"; if not, write to the Free Software Foundation, Inc.,
+59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
 
-Linking Rosetta statically or dynamically with other modules is making a
-combined work based on Rosetta.  Thus, the terms and conditions of the GPL
-cover the whole combination.  As a special exception, the copyright holders of
-Rosetta give you permission to link Rosetta with independent modules,
-regardless of the license terms of these independent modules, and to copy and
-distribute the resulting combined work under terms of your choice, provided
-that every copy of the combined work is accompanied by a complete copy of the
-source code of Rosetta (the version of Rosetta used to produce the combined
-work), being distributed under the terms of the GPL plus this exception.  An
-independent module is a module which is not derived from or based on Rosetta,
-and which is fully useable when not linked to Rosetta in any form.
+Linking Rosetta::Extensions statically or dynamically with other modules is
+making a combined work based on Rosetta::Extensions.  Thus, the terms and
+conditions of the GPL cover the whole combination.  As a special exception, the
+copyright holders of Rosetta::Extensions give you permission to link
+Rosetta::Extensions with independent modules, regardless of the license terms
+of these independent modules, and to copy and distribute the resulting combined
+work under terms of your choice, provided that every copy of the combined work
+is accompanied by a complete copy of the source code of Rosetta::Extensions
+(the version of Rosetta::Extensions used to produce the combined work), being
+distributed under the terms of the GPL plus this exception.  An independent
+module is a module which is not derived from or based on Rosetta::Extensions,
+and which is fully useable when not linked to Rosetta::Extensions in any form.
 
-Any versions of Rosetta that you modify and distribute must carry prominent
-notices stating that you changed the files and the date of any changes, in
-addition to preserving this original copyright notice and other credits.
-Rosetta is distributed in the hope that it will be useful, but WITHOUT ANY
-WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
-PARTICULAR PURPOSE.
+Any versions of Rosetta::Extensions that you modify and distribute must carry
+prominent notices stating that you changed the files and the date of any
+changes, in addition to preserving this original copyright notice and other
+credits.  Rosetta::Extensions is distributed in the hope that it will be
+useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-While it is by no means required, the copyright holders of Rosetta would
-appreciate being informed any time you create a modified version of Rosetta
-that you are willing to distribute, because that is a practical way of
-suggesting improvements to the standard version.
+While it is by no means required, the copyright holders of Rosetta::Extensions
+would appreciate being informed any time you create a modified version of
+Rosetta::Extensions that you are willing to distribute, because that is a
+practical way of suggesting improvements to the standard version.
 
 FIN
 
