Import of DUNCAND/Rosetta-Extensions-0.08 from CPAN.
gitpan-cpan-distribution: Rosetta-Extensions
gitpan-cpan-version:      0.08
gitpan-cpan-path:         DUNCAND/Rosetta-Extensions-0.08.tar.gz
gitpan-cpan-author:       DUNCAND
gitpan-cpan-maturity:     released

--- a/TODO
+++ b/TODO
@@ -1,37 +1,65 @@
-NEWER DEVELOPMENT TRACK
+CURRENT DOCUMENTATION: TODO
 
-r0.07 - Continue to implement Generic.pm.  Coordinate with the separately
-released Rosetta::Validator module(s) and actually test that basic stuff like
-connecting to a database, creating tables, and basic DML functions work. 
-Update the list of 'standard functions' in SQLBuilder (and SQL::SyntaxModel) to
-more closely reflect the SQL-2003 standard, fill other gaps.  Test it against 
-SQLite and MySQL.
+Preamble: The following will have external coordinated changes in
+Rosetta::Validator so that they can be tested and, where needed, Rosetta and
+SQL::SyntaxModel also.  The SQL-2003 standard will continue to be used for
+primary guidance.  Free database products that run under Mac OS X 10.2+ and
+have a well-maintained DBD module will get the early priority simply because I
+can easily download and install them on my computer.  Other databases will get
+supported when I can get access to them, or someone else does it for me.
 
-r0.08 - Update Rosetta::Engine::Generic to implement some schema reverse
-engineering functions, such as to scan a database and populate a SSM with
-descriptions of its tables, including columns and indexes.  Corresponding 
-Validator updates.  Test it against SQLite and MySQL.
+r0.09 - Start off the Rosetta::Utility::SQLParser module.  Update Generic.pm
+and the two Utility modules to finish implementing these commands: SCHEMA_LIST,
+SCHEMA_INFO, SCHEMA_VERIFY, SCHEMA_CREATE, SCHEMA_DELETE, DOMAIN_LIST,
+DOMAIN_INFO, DOMAIN_VERIFY, DOMAIN_CREATE, DOMAIN_DELETE, TABLE_LIST,
+TABLE_INFO, TABLE_VERIFY, TABLE_CREATE, TABLE_DELETE.  Test that they work
+against SQLite and MySQL.  In other words, make sure that table creation,
+removal, and reverse-engineering for tables works with SQLite and MySQL.  At
+this moment, reverse-engineering will be done manually since it's simple.  If
+possible, do this using: Perl 5.8.5, DBI 1.43, SQLite 3.0.6+, MySQL 4.1.4+. 
+Once that's done, announce Rosetta/SQL::SyntaxModel Developer Release #2.
 
-r0.09 - Start the Rosetta::Emulator::DBI and Rosetta::Utility::SQLParser modules 
-and try to get them working on something simple, like connecting to a database 
-and selecting records.  Maybe table creation and IUD also.
+r0.10 - Make application-side standard routines work, so that the standard
+selects and DML are possible.  Use same dependencies as above.
 
-r0.10 - Some time around now I will circulate some RFCs to the likes of
-dbi-users and poop-group so I know what the next major issues I have to address
-or explain are, from the viewpoints of actual potential users.  Around the same
-time, any or all of the core Rosetta/SSM modules may be updated to 'alpha'
-development status, up from 'pre-alpha'.  I may want to change the License
-around then too.
+r0.11 - Make the stuff developed previously work with SQLite 2.8.15+ and MySQL
+3.23.x, adding features emulation for sub-selects and compound selects (using
+temp tables and joins).  Test both named and positional host params.  Once 
+that's done, announce Rosetta/SQL::SyntaxModel Developer Release #3.
 
-* Actually test with PostgreSQL and OpenBase.
+r0.12 - Make the previous stuff work with a recent PostgreSQL version, either
+7.4 or 8.0.  Finish implementing server-side view and routine creation and
+removal, since we now have a database engine that supports those features.  At
+this moment, SQL tokenizing will probably be handled by a new dependency, such
+as Parse::RecDescent, as it is a lot more complicated.  Once that's done,
+announce Rosetta/SQL::SyntaxModel Developer Release #4.
 
-* Actually test with Oracle.
+r0.13 - Start working on the schema-to-schema or db-to-db cloning features, and
+the insert-cursor features.
 
-* Start working on the ::Proxy modules, eventually.
+* Update the list of 'standard functions' and 'standard procedures' in
+SQLBuilder (and SQL::SyntaxModel) to more closely reflect the SQL-2003
+standard, fill other gaps.
+
+* Start the Rosetta::Emulator::DBI module and try to get it working on
+something simple, like connecting to a database and selecting records.  Maybe
+table creation and IUD also.
+
+* Some time around now, any or all of the core Rosetta/SSM modules may be
+updated to 'alpha' development status, up from 'pre-alpha'.  I may want to
+change the License around then too.
+
+* Announce the Rosetta/SQL::SyntaxModel Generally Available Release #1.
+
+* Get it to work with Oracle, OpenBase, other commonly used database products.
+
+* Start working on the Proxy modules, eventually.
 
 * Whatever else needs doing ...
 
-OLDER DEVELOPMENT TRACK
+OLDER DOCUMENTATION: TODO
+
+Preamble: This was first written early in 2003 and hasn't been changed since.
 
 * Connect to (or open) an existing database as a registered or anonymous user,
 which establishes a current working context for doing anything else, and close
